# pandera-unified-validator

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  publish.yml  workflow.yml
.hypothesis/constants/: 0e44af76d2bc644a  3271e3cf7d903e6b  586d1d358884fcbf  65fe768257c231f4  7c895bb25bf9dc8b  a0cfdee5b272e8dd  a33d29d566ecbba8  a77774c5bd7478c8  b6590de59b936cb5  c193b24d0ec2a276  c5a64a70a8088332  c5b7fdedc16e538c  c93bf26a0d2b2365  cc9795bb9065d52e  eec055e982b0821e  fd2f8585d579b686
docs/: README.md
docs/examples/: 01_basic_validation.py
examples/: reporting_demo.py
src/data_guardian/: __init__.py
src/data_guardian/backends/: __init__.py  pandas_backend.py  polars_backend.py
src/data_guardian/core/: __init__.py  schema.py  streaming.py  validator.py
src/data_guardian/profiling/: __init__.py  profiler.py
src/data_guardian/utils/: __init__.py  reporting.py
tests/: conftest.py
tests/test_core/: test_benchmarks.py  test_hypothesis.py  test_profiling.py  test_reporting.py  test_schema_builder.py  test_streaming.py  test_unified_validator.py  test_validator.py
