[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "data-guardian"
version = "0.1.0"
description = "Advanced data validation library unifying Pydantic and Pandera with multi-backend support"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
  { name = "Ian Pinto", email = "your-email@example.com" },
]
dependencies = [
  "pydantic>=2.0",
  "pandera>=0.18",
  "pandas>=2.0",
  "polars>=0.20",
  "rich>=13.0",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
  "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/ianpinto/data-guardian"
Repository = "https://github.com/ianpinto/data-guardian"
Documentation = "https://github.com/ianpinto/data-guardian/tree/main/docs"

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-asyncio>=0.21",
  "mypy>=1.7",
  "ruff>=0.1.6",
  "black>=23.11",
  "coverage[toml]>=7.3",
]
parquet = [
  "pyarrow>=14.0",
]
database = [
  "sqlalchemy>=2.0",
]
profiling = [
  "ydata-profiling>=4.6",
  "sweetviz>=2.3.1",
]
all = [
  "pyarrow>=14.0",
  "sqlalchemy>=2.0",
  "ydata-profiling>=4.6",
  "sweetviz>=2.3.1",
]

[tool.hatch.envs.default]
dependencies = [
  "pytest>=7.4",
  "mypy>=1.7",
  "ruff>=0.1.6",
  "black>=23.11",
  "coverage[toml]>=7.3",
]

[tool.hatch.envs.default.scripts]
test = "pytest --maxfail=1 --disable-warnings --strict-markers"
lint = "ruff check src tests"
fmt = "black src tests"
fmt-check = "black --check src tests"
typecheck = "mypy src"
coverage = "coverage run -m pytest && coverage html"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "PIE"]
ignore = []

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
mypy_path = ["src"]
namespace_packages = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra --strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["data_guardian"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
precision = 2